--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "material-icons": "^0.3.1"
   }
 }
