--- a/settings.yml
+++ b/settings.yml
@@ -4,3 +4,6 @@ header_categories:
   list_type: category
   description:
     en: A list of categories to render below the header. Defaults to off.
+show_hero:
+  type: bool
+  default: true
