--- a/settings.yml
+++ b/settings.yml
@@ -1,3 +1,6 @@
+extend_content_security_policy:
+  type: list
+  default: "script_src: https://unpkg.com/@debtcollective/"
 header_categories:
   type: list
   default: ""
