feat(popup): allow configurable content
set a setting for popup url and translations support for its text in order to allow theme admin to
change it as he needs to

--- a/settings.yml
+++ b/settings.yml
@@ -16,3 +16,8 @@ show_current_efforts:
 logo_href:
   type: string
   default: ""
+popup_url:
+  description:
+    en: Define the URL that user will redirect to when click the popup (use full url from browser bar)
+  type: string
+  default: "https://community.debtcollective.org/t/user-experience-feedback-new-theme/4110"
