fix(circle-ci): set correct branch to trigger job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,4 @@ workflows:
       - update_theme:
           filters:
             branches:
-              only: develop
+              only: development
