fix: lint-staged glob pattern should include .es6 and .js.es6

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "prettier": {},
   "lint-staged": {
-    "*.{js,html}": [
+    "*.{js,js.es6,.es6,html,json}": [
       "prettier-eslint --write",
       "git add"
     ],
