--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "cypress": "^4.12.1",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.0.10",
     "lint-staged": ">=8",
