build(cypress): improve base config for e2e
use e2e folder, load testing-library commands, add new ignored files and ensure linting of project

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ node_modules
 .discourse-site
 HELP
 .DS_Store
-/cypress/integration/examples
-/cypress/fixtures/example.json
+cypress/integration/examples
+cypress/fixtures/example.json
+cypress/videos
+cypress/screenshots
