--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@jackfranklin/test-data-bot": "^1.3.0",
     "@testing-library/cypress": "^6.0.0",
     "cypress": "^4.12.1",
     "eslint-config-kentcdodds": "^14.14.2",
