--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@testing-library/cypress": "^6.0.0",
+    "babel-eslint": "^10.1.0",
     "cypress": "^4.12.1",
     "eslint-config-kentcdodds": "^14.14.2",
     "eslint-plugin-cypress": "^2.11.1",
@@ -52,6 +53,10 @@
       ]
     }
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "prettier": {},
   "lint-staged": {
     "*.{js,js.es6,.es6,html,json}": [
