--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@hint/configuration-web-recommended": "^8.2.1",
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@testing-library/cypress": "^6.0.0",
     "babel-eslint": "^10.1.0",
@@ -10,6 +11,7 @@
     "eslint-config-kentcdodds": "^14.14.2",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "hint": "^6.1.3",
     "husky": "^4.0.10",
     "lint-staged": ">=8",
     "postcss-html": "^0.36.0",
@@ -55,7 +57,8 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not dead"
   ],
   "prettier": {},
   "lint-staged": {
