--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,11 @@
 extend_content_security_policy:
   type: list
   default: "script_src: https://unpkg.com/@debtcollective/|script_src: https://cdn.jsdelivr.net/gh/GraemeFulton/blm-badge/blmbadge.min.js"
+header_discourse_visible:
+  type: bool
+  default: true
+  description:
+    en: "Show the customised header using discourse built-in base"
 header_categories_visible:
   type: bool
   default: true
